<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile_img"
            android:icon="@drawable/referee_128x128"
            android:title="@string/profile"/>
        <item
            android:id="@+id/ticket_img"
            android:icon="@drawable/ic_credit_card_black_24dp"
            android:title="@string/buy_ticket" />
        <item
            android:id="@+id/concert_img"
            android:icon="@drawable/ic_local_activity_black_24dp"
            android:title="@string/my_concerts" />
        <item
            android:id="@+id/friends_img"
            android:icon="@drawable/ic_supervisor_account_black_24dp"
            android:title="@string/friends" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/settings_img"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/sign_out_img"
                android:icon="@drawable/ic_keyboard_tab_black_24dp"
                android:title="@string/sign_out" />
        </menu>
    </item>
    <group />


</menu>
